Check if the next text node has a leading white space

In the previous CL(https://crrev.com/2432083003), we only checked
the leading space of the next text node, but we need to check all kinds
of white space including enter.

BUG=661375
TEST=editing/inserting/insert-space.html

Review-Url: https://codereview.chromium.org/2684973005
Cr-Commit-Position: refs/heads/master@{#449251}

Former-commit-id: 5b9a9a6f8c9c646ac542a9e1a2f18c59140849e6